added input to signout

--- a/whaiout.ipynb
+++ b/whaiout.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:10d40a765a1c9be0e2db3bfba6b88c6351aaab0ebcfd201fc1b8d8b0bd2ed707"
+  "signature": "sha256:de2cfef40e6c76c1d235b0571d9d73937b935493a6d3f0f52edd9dc58ac6f52f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -36,7 +36,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 121
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -47,7 +47,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 122
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -74,11 +74,11 @@
        "text": [
         "[u'visitor sign database']\n",
         "[text:u'In Date', text:u'In Time', text:u'In Code', text:u'Name', text:u'Reason', text:u'Out Date', text:u'Out Time', text:u'Out Code']\n",
-        "[text:u'11-Oct-2014', text:u'06:03', text:u'187ab7de7351e16b1d1d9907831f151b9e9a251ccadc41ec8db1a09e851e9a7d2905169099133130edee273576319c2fe7a63c9f1b184c3779e567cead85c102e52bcc17fb5e92606da640bb14ad5770e6864719a5157b220927edf5c24e3265cc06305fd239510ec775e89c5269d720bcf94d0dc9d6e1353f139151148c4655', text:u'William Mckee', text:u'ESW', empty:'', empty:'', empty:'']\n"
+        "[text:u'12-Oct-2014', text:u'17:47', text:u'67b61118ef755239362fbefa4125d1facee4209fa44dd767032ea71348155068d830d0944b51d31841f9843bedbbf2eb28f105337b78cbfca6a0804aae3c0eb0bb9d1136bf1f7904e401b66332727abab94d439a15e20ccb39632938ddf4e25bedc122fa5576affe10a5e4c90a6b94ea1c9e84feac1a1e6d5c1e28e00e6c3384', text:u'William Mckee', text:u'ESW', empty:'', empty:'', empty:'']\n"
        ]
       }
      ],
-     "prompt_number": 123
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -89,7 +89,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 124
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -106,9 +106,9 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "11-Oct-2014\n",
-        "06:03\n",
-        "187ab7de7351e16b1d1d9907831f151b9e9a251ccadc41ec8db1a09e851e9a7d2905169099133130edee273576319c2fe7a63c9f1b184c3779e567cead85c102e52bcc17fb5e92606da640bb14ad5770e6864719a5157b220927edf5c24e3265cc06305fd239510ec775e89c5269d720bcf94d0dc9d6e1353f139151148c4655\n",
+        "12-Oct-2014\n",
+        "17:47\n",
+        "67b61118ef755239362fbefa4125d1facee4209fa44dd767032ea71348155068d830d0944b51d31841f9843bedbbf2eb28f105337b78cbfca6a0804aae3c0eb0bb9d1136bf1f7904e401b66332727abab94d439a15e20ccb39632938ddf4e25bedc122fa5576affe10a5e4c90a6b94ea1c9e84feac1a1e6d5c1e28e00e6c3384\n",
         "William Mckee\n",
         "ESW\n",
         "\n",
@@ -117,7 +117,7 @@
        ]
       }
      ],
-     "prompt_number": 125
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -131,11 +131,11 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 126,
+       "prompt_number": 6,
        "text": [
-        "[u'11-Oct-2014',\n",
-        " u'06:03',\n",
-        " u'187ab7de7351e16b1d1d9907831f151b9e9a251ccadc41ec8db1a09e851e9a7d2905169099133130edee273576319c2fe7a63c9f1b184c3779e567cead85c102e52bcc17fb5e92606da640bb14ad5770e6864719a5157b220927edf5c24e3265cc06305fd239510ec775e89c5269d720bcf94d0dc9d6e1353f139151148c4655',\n",
+        "[u'12-Oct-2014',\n",
+        " u'17:47',\n",
+        " u'67b61118ef755239362fbefa4125d1facee4209fa44dd767032ea71348155068d830d0944b51d31841f9843bedbbf2eb28f105337b78cbfca6a0804aae3c0eb0bb9d1136bf1f7904e401b66332727abab94d439a15e20ccb39632938ddf4e25bedc122fa5576affe10a5e4c90a6b94ea1c9e84feac1a1e6d5c1e28e00e6c3384',\n",
         " u'William Mckee',\n",
         " u'ESW',\n",
         " '',\n",
@@ -144,19 +144,40 @@
        ]
       }
      ],
-     "prompt_number": 126
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "tiran = os.urandom(128).encode('hex')\n",
-      "reran = os.urandom(128).encode('hex')"
+      "reran = os.urandom(128).encode('hex')\n",
+      "comran = os.urandom(128).encode('hex')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 127
+     "prompt_number": 24
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "inpcom = raw_input('comment: ')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "name": "stdout",
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "comment: fun day\n"
+       ]
+      }
+     ],
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
@@ -169,7 +190,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 128
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -181,7 +202,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 129
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -192,7 +213,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 130
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -203,7 +224,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 131
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -220,7 +241,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 132
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -231,7 +252,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 133
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -242,7 +263,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 134
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -270,56 +291,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "<!DOCTYPE html>\n",
-        "<html>\n",
-        "  <head>\n",
-        "    <title>visitor sign database</title>\n",
-        "    <link href=\"style.css\" rel=\"stylesheet\">\n",
-        "    <script src=\"script.js\" type=\"text/javascript\"></script>\n",
-        "  </head>\n",
-        "  <body>\n",
-        "    <div id=\"header\">\n",
-        "      <ol>\n",
-        "        <li>\n",
-        "          <a>10-Oct-2014</a>\n",
-        "        </li>\n",
-        "        <li>\n",
-        "          <a>21:44</a>\n",
-        "        </li>\n",
-        "        <li>\n",
-        "          <a>d590ef04f82e687eaf7584ef14c05bc074a99221f6b795d3a832dc0f7804b1f5a8af8978745ba1de227bcff85df4c6281fe6aa805e7e4ca136409ed69bcdb3543add71e1042aee18442cc889b9d2b72745ed5fc32c5288df80b1271c348d7a398b125f93f31ca3843843479b7711d518ed8e51df3f1ad607a1ab501f241ee782</a>\n",
-        "        </li>\n",
-        "        <li>\n",
-        "          <a>William Mckee</a>\n",
-        "        </li>\n",
-        "        <li>\n",
-        "          <a>ESW</a>\n",
-        "        </li>\n",
-        "        <li>\n",
-        "          <a></a>\n",
-        "        </li>\n",
-        "        <li>\n",
-        "          <a></a>\n",
-        "        </li>\n",
-        "        <li>\n",
-        "          <a></a>\n",
-        "        </li>\n",
-        "      </ol>\n",
-        "    </div>\n",
-        "    <div class=\"body\">\n",
-        "      <p>visitor sign database is open source. Visit https://github.com/wcmckee/wcmckee </p>\n",
-        "    </div>\n",
-        "  </body>\n",
-        "</html>\n"
-       ]
-      }
-     ],
-     "prompt_number": 61
+     "outputs": [],
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -330,7 +303,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 135
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -341,7 +314,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 136
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -354,7 +327,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 137
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -367,7 +340,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 138
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -378,7 +351,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 139
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -392,13 +365,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 140,
+       "prompt_number": 21,
        "text": [
-        "'70f8ec461462'"
+        "'3794fd4340da'"
        ]
       }
      ],
-     "prompt_number": 140
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -411,7 +384,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 141
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -425,13 +398,21 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 142,
+       "prompt_number": 23,
        "text": [
-        "\"['ESW', 'William Mckee', '06:03', '11-Oct-2014']['06:06', '11-Oct-2014']\""
+        "\"['17:47', 'ESW', 'William Mckee', '12-Oct-2014', 'it was a good day']['17:59', '12-Oct-2014']\""
        ]
       }
      ],
-     "prompt_number": 142
+     "prompt_number": 23
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
