added json instead of list

--- a/whaxlu.ipynb
+++ b/whaxlu.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0dc12fb552e36e22b24d590a3e98f7137caba080c4d2d492db3ff7304f5241bb"
+  "signature": "sha256:05ddee1c82e8e0f2f27867658d2d2295d6bd12110c775463a581ca5a4c0ec696"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -52,6 +52,7 @@
       "import dominate\n",
       "import sys\n",
       "from dominate.tags import *\n",
+      "import json\n",
       "#from sqlalchemy import Column, ForeignKey, Integer, String\n",
       "#from sqlalchemy.ext.declarative import declarative_base\n",
       "#from sqlalchemy.orm import relationship\n",
@@ -60,7 +61,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 66
     },
     {
      "cell_type": "code",
@@ -73,7 +74,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 67
     },
     {
      "cell_type": "code",
@@ -111,7 +112,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 68
     },
     {
      "cell_type": "code",
@@ -150,7 +151,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 69
     },
     {
      "cell_type": "code",
@@ -161,7 +162,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 70
     },
     {
      "cell_type": "code",
@@ -174,7 +175,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 71
     },
     {
      "cell_type": "code",
@@ -185,7 +186,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 72
     },
     {
      "cell_type": "code",
@@ -202,7 +203,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 73
     },
     {
      "cell_type": "code",
@@ -213,7 +214,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 74
     },
     {
      "cell_type": "code",
@@ -226,7 +227,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 15
+     "prompt_number": 75
     },
     {
      "cell_type": "code",
@@ -237,7 +238,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 16
+     "prompt_number": 76
     },
     {
      "cell_type": "code",
@@ -251,13 +252,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 17,
+       "prompt_number": 77,
        "text": [
-        "'Sun, 12 Oct 2014 17:47: +0000'"
+        "'Mon, 13 Oct 2014 07:58: +0000'"
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 77
     },
     {
      "cell_type": "code",
@@ -269,7 +270,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 18
+     "prompt_number": 78
     },
     {
      "cell_type": "code",
@@ -280,7 +281,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 19
+     "prompt_number": 79
     },
     {
      "cell_type": "code",
@@ -297,18 +298,18 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "98342e1996015164ce19573fef2116413d8e4e22287ab92757f58c14215c418fb5424ffed07cd4b36c73fc3e2014f70bfed4e3d22f0a78f3d7d9da94a63a02a4c0eac642bac04f638c2c2b7f24114b6a2ebdc1bcd16d70f1d4814a4fe5c69755668ab5c956d1e5d7df54e4ef6fdd96a537f82e21bd0934e4f620200bab16cd4a\n",
-        "72a707300534a10dd559f5a45471fb064d55fd4dbb63904ecf25b0e76f7bde67f9dd43b1f24513635a757fecfe9783c32e7f1725e266a77c1ecf0b9ab4f81a5273fd08fc7bd5d9d8fea5ab72d4504dea0e1ddb56cc9b8634b7ff1375e3629968717d6201a02101f9b8a1f26a4e70e6257ed7b50c1e9346074bc3fe042cc2eb65\n",
-        "a728b16985c08b24678c957f2d86952b409bdfe87239208c6703986a9cf95e33621729ac975ae6a6cb31715f2a55e6a521196002d0a11b7149c2591c00a5b5f6067d41cccec02d3ca60230aecb7a31571c63b13c3ce1ebda30c38b9f9ef4e108a8a98deb18eac95da757d5dec4d137f284693d06829a3853d8673ec0290f2226\n",
-        "ea511efab154866da6666ffa18dd08862c8a2b9697e758f44855348c3c28dd101e26a70a46b2bbfc24212170979bd465b7d27491bbda7bd712387658a88b5de622ad5a906bdca252466ec1c920c2d772393ce6927fb04d439dad65e9eca03e4e825ac75013c44d354758be8ce6a9b0d5613321e5040fb890f1fff731a24b4a3c\n",
-        "de861b26115add3f6bea182f064b39e317613b7967c84f85b8774bfbf92afa556c64063aba1b433dbba0c6cd72669c82730bb4005ec2c9058f2ad1bf09b161b59b09985f9cafd6044520154e711118bd15bf026349252c52fd319b48f228d5a3a567dc52ce003113ff7e1190c35bbe11ee3fdb4c996cf9bb812e990a8af282ec\n",
-        "e234676835caac04e99ec29bf63072b285bf4dce698085773de4f2438dd86d81499042940caf9673c9e04c3a3c92eb1cbb524d63aac269c2b26da85070d18e0e6ce60f29a76e37f7c73eaaad0f25514fd341a59292e9a482b249cd45b42bcdff162b4fe0dec115fdaab7b0c91632320172fad6d19abd571a61ed701b41f36c1f\n",
-        "814a76ce3109cd8d398828725b44714553c16d62c38c331f9c4f679a64ff37c28f0487c9c8c086673ac67bee9b93e0232a3e8e102075edba80d67ed0209791ad60f86126704341809b3d66473dfb49ae157af00112272c0c99c38859bd7132eee8313ff89737aa6f145a5a525f01791f7fef737890cc89f814e922900660779d\n",
-        "3fd4e64a42fb085a8e1cfdfa4fb1437c069a378bf1f43ea7c0f70717bae5b5ba93534a301ee440794e66c98c6aefe2934c90b73b5ec728d413684c0c49d6d309012fc1a0df523aa3877e5a19bd3fa9ef79a20bb755bb07dcdd69c0c50ddfffde46bc3b3ca2bfe1047285184659a1d19648d0c5518bb2c0afec636636eaf96beb\n"
+        "616ee92777372c3c77808b43877b3e08c5c585ea951a7d9190979f7033ac478b9660e76a99e59a34a3453a5ce592aa2c8934ddd2d9b4dac6d8f93d242ed48f359e57c923e03b32ffdef98c98eacd30f9a77d373d71719c6fbb8e63fbfe70d5378472ccf801ffe3a0786d1d327cc19b7be942a58f34c80200dca7e644ee1c80b2\n",
+        "a6dc68e7bd1372003eb30fc662323e7ce54afac843dc89e1d2f700f59eea845f4d104da2ed06745682bf1aac182eeb09c4ad6214669fcc483cc7aac2722e4936dea522ba13567df11b5c99fb5335a42b46cf13128aa23a7c94f7144b4894b72fb493977bb6ee7218ba5f5b159aa07673b1c3143508e7ed45eb6a582c9a7a82bc\n",
+        "b2e2f99c2e56d399694eaeb683aabcae2f814ac92187f12dbcc2f8d8b1efb60e2585d0efdf7ca00e5f25c07b145f149f6cb22ddc70ce7ca8d54cf2f997e1e37d172110dfad3a7181d10497b108b0c498f5bab076969251e9bc5df0e3fd3a34c40005e490bfd6e13661016cbc9f75c9d9b25b0bdb57d371bc5668987f5db323ad\n",
+        "d2d0d292092f8c737268e986ddfa3f6cbcb9551d95b6452ecad14b6dd3cbdd3c29144c88cbdbfb5d6934f3b26903ca6856f28c7263f7b8089d2233547d329526407a73366d5d8dd39f2e83216c5c16d0da9e4f634eb1fcf77dbcb4e379b8b67be254f38ef9c31e0590f40559fdf096494064d525c20f2025a3dfd409f8589407\n",
+        "dc10de54f2fa4c17ef839fe4f37e455b82629201b40733ca0925087cd718ea9dc492808be317d69c1c6be37b01bae4708edac22ef83b6096b95260551b60d8d62fe0d4fbf0c62e3766a110f9b2e586ec411304f6eb6e9943f767f50c565b852ad36de4e604e547aed16191307d1f1ce4c973f795ea83eb55a7de0226aa383a84\n",
+        "3f0bca4860103480cda280b61fbb5ba13d5a5681e9a055ccd51da10eade0c4e45c7bf5b5be2d257da5c9f9baba274d45694505e0815d7dc80f130c16de3b386985603daf7712c692e569f8c8f26ec831e84314c3652d7c9de3b38cd9337fa37c92eb1fb51325df8293b155991c7d76156a5e6a13f6759c6ce698fcb897b6c239\n",
+        "2e2d3d43ad100dd695cb006bf6eff0c2ed39b723b01f0518242caa821ee23c4e0b04317363cae6e62bb8d78cdaeb4b4fda0ea44f65a8d88aa4e4bc4440e37d5b0fb9d36e59507627ee2c8f994bb3c3756166123fa0c9e88d9fa3a74fd26bb16f0b0e5f49189da6a32d1d908dd0a8c2e830f333682d4036a14dd59511c92e1260\n",
+        "9890649830580e914ae68841fa43534ed2a956caf6902d442aea2690be5c484c876a81a96b5371e41c4c7d67a6c4e055876fb0f31fcc5a9ab6236ba6346382be6d1e41a28efd4fb11cb0db63f3333c03e687d415098e0930d0febfb80a0fd96027e0a9bb8412a4effe87ec1282580b58229e90f5a4bea7148d26f70282ed99f3\n"
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 80
     },
     {
      "cell_type": "code",
@@ -322,20 +323,20 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 21,
+       "prompt_number": 81,
        "text": [
-        "['2226d323c5c90652e7c70abca2cbe5eb7a74dc1d49780ac8ebb0ff6ec2eeaa8b735c87b50c5ad4c2f0ee4a9852272bace8fef5e87b48c9b16da34d9e61f965c555cbd91063282c4a1afd1d1cfa7f05b99f6653816a13970cb0a57bf87fb1445742d6fa16148cbbed3a26b377fb15bb5154e7218fdf2299e76962419502d04c68',\n",
-        " 'f4e59a287ff96af450ec11b7f7fd5a83102ffd184ed22f87f5a815b1c4c2eee801376ede2a6fe783f9232c5a4c241199af66ad03d787111a74b3b4cbb77a043fdb46f2726b2f023fa1645903a443110172206e9e1ebdc6aa71ce2c9404a6fc248d6232ea783069f10e1007b98ddc4eba439fd87bdb9ef68279cbee2ba632fe10',\n",
-        " '5b385eef6e3d04ebc8a6a25647d138b31ce65699514bd848d3062353ca2e889e015e0bb15daffe250d8002d2c60bf4b67964688557e45477cdd07c5e1a523845c07668d9714c4b6e75996ab56f4bf34a2f20fe79a78b0eccf4447a157acef4b9a27df7dcd3c43639d10ee3f06de7e74b9f922bf2b8563ee07dcb8c8c93f69696',\n",
-        " 'd05a4b44bcaea44ace62ea11bd8db5aa0cf738bd33bb58b37a43697bc2462269c02469269cbd78afe87d43bc96ac012845053344be50b99394015f0cc783bcabd436cdacf2d1121b3605cac98eda6f2c06f5321cd9baff6567061850c4f67bb292cefa8a2c9fa1f092062f7e30a55123d35b8a5105398b12613fd2702ad4dc79',\n",
-        " '3786d2634c41c4fd17eb0fd90b9587bed82cf3ce850492829e2debf090abce45a076dc15cec6e6541bd486bae9519d5e9f69683ed08f36a79320b74714f372f2e115ea8ef9d0c9ca46ac760cebce5cae254aed2d1346eed2b23074bea4935815424675657592ae357a0e7ab11f8fc45c814a38a79cecd8f8d068722113767f6c',\n",
-        " 'e57e4483d87d30cd35745a47bf424234c0b480c18c96328d95b9908d4c2e0f1cb31e6e31bb253e2e9719d1b6282f57deb99446042bc8021045d8b0bab43ffbd61fe6b9e30b305c8be4bde413b752d8bb4803f70de450c1e86148736a4b551203f4cc772c8455783c7e93c87b7994d03d9dd8ade4190f20320daff00e642013e5',\n",
-        " '8cc931576522ed6f34247075970826c34089300e42e1dc64cee2906b469d4f99033298e41783f0564e1f9b18b5c174b968f6b60237abda7cf66c5a9808190ea1450a346446e796d63fdf8a695560ae54830634d0602222797336b90f702610c8e9010c8e83ff191c702aa88f7aa07dd0c6c230100ba9e64bcbbca1837b3c127c',\n",
-        " 'eb17dc4309d9b5fc52178803499eed159e06ba787283180020038a2aa594ad09576070ff06d0c244664946dd0d0771de7c9185c9a155ffa01ae18c6fde9582c9d289773ff36fdf6c8d04faa294fc713f1d05386261b1e25dff7db713287c73d39cc2753cb2a75b65f446f1e03f4c4dc14e0be5addc894593c76b53655a50244f']"
+        "['2cb3aba5061a4df3f2044b213c00803cae38ddfe497c1f54e85297274b0153ec0fb4e81394ac54a01adae14c609c5aa43ab228707c647b035351b42a174f30032aefaac95171a3529531c33ec5d8495f433baf9f1513544ef8ca375057c1ad95d88a77c276a3feeb80d1fc60cc2a5ce40e40488b79aa2a9c278a6b49daeaf066',\n",
+        " 'b055006afdff1a346e31db74694ddaa5d2badb8c4a5e5cec8833cd1469002cfa58ad8e6bdf6583aa2a4ed92dfaf56c6e64b49aff132a11509a2c446fcb9aa72190c623bf2a1096eda4eb625653772ebf7d752de7584daeaf5c70dacbc066b20160d0e55f3d4f001c200a09ba346fabf25abc0cc8f76a785e4b87c4f0f5287b06',\n",
+        " '0520ec87b55b93b348d02d7a2ac1097415d37a6ef21d47235c42ca520d0674bc1fd87a79841d71950e3aca407c964dd99b78219da5a441078acdfae56717729669dcb6d9e742949c44d1dde2d090d706decdc2f61721295f45cc7366e1026ce312ca068cbe45ea670043826f7bea501a99f49898886ca6b8f512126695fdc2a8',\n",
+        " '87db533c4aef1b6f978466f982b3941f9a5e471d470578a53a9a673d4fe9800e0897e5f06f68ffae0b68eb63701cdeed398e9ffa438cf367541ad0846cf0cee84bb594f1930b435044092f911079d7117e35a8dd378f3f661cdec9a35937df175b0966110310b0173e15b675b612c9e3fb2cce8f6fb108cc193e3c1603d24b4a',\n",
+        " '50b97eff3b76105ae6c90a54c75cd9ebc8f80274541a5708d3cd6c8e8328ac4525481eb53e8f80facf5b9bd14a07e4338fb7e674ce4a1c88067b4e70f51c5e1ce237519e19ba3dd28fb430d011fc25fc76c925bf425824b610976233078ca7ce9a55d018722c264ada166bb1b7ffb7e35dff986b555bd5b3b046064d78f796fa',\n",
+        " 'ed2f1d0effa6c6e8d7a369c6f33d25efed71fb706d7ee7b30364f1ed73e0c89d5d2f8c1665435534263eda0f1ae1e20025bba752c1c24f92c74925886592f633db9fb1658e747d168538d92c5cfe873d9eb4393e99b1e74d4cf4d2b297a5bbd12ecbd34d5cf47d5c1f4dfcc36338a60846cc5aee76cb14fdd0727cb47f1a11c9',\n",
+        " 'bc3df32232e026bc307d3a176a052ee513e693b88952984d8e682807ce2c30447eb48ef584563b260606b013bc7f8ee96c06552547a4a36cfdd424fd2a272cc243004723a1b15c6aaf13cf38ee277302987930ff39434d5fa35d3ed028b556ad036c1a110c146a1cedba83fda60731da62c3bd93bbb6650b1bdcac8d5d0ac54a',\n",
+        " '42ac90adda0dfcb79d22ae488711e7ca07542218df8744faec249643a545ad4e48614b68e21a0583776c85bd1528c4268b1816b665dc6652aca8bf448642daf91d41e00c0ab132808ca564ffe13adf144d75a40c8d8e766469a86b4e6ca9d8de1d2e8bb36b2b171986af9fc06743acb509abda147c26786942979d34dfd7e8d9']"
        ]
       }
      ],
-     "prompt_number": 21
+     "prompt_number": 81
     },
     {
      "cell_type": "code",
@@ -346,7 +347,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 22
+     "prompt_number": 82
     },
     {
      "cell_type": "code",
@@ -357,7 +358,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 23
+     "prompt_number": 83
     },
     {
      "cell_type": "code",
@@ -368,7 +369,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 84
     },
     {
      "cell_type": "code",
@@ -379,7 +380,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 25
+     "prompt_number": 85
     },
     {
      "cell_type": "code",
@@ -406,7 +407,7 @@
        ]
       }
      ],
-     "prompt_number": 26
+     "prompt_number": 86
     },
     {
      "cell_type": "code",
@@ -442,7 +443,7 @@
        ]
       }
      ],
-     "prompt_number": 27
+     "prompt_number": 87
     },
     {
      "cell_type": "code",
@@ -460,7 +461,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 28
+     "prompt_number": 88
     },
     {
      "cell_type": "code",
@@ -475,7 +476,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 29
+     "prompt_number": 89
     },
     {
      "cell_type": "code",
@@ -487,7 +488,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 30
+     "prompt_number": 90
     },
     {
      "cell_type": "code",
@@ -498,7 +499,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 31
+     "prompt_number": 91
     },
     {
      "cell_type": "code",
@@ -509,7 +510,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 32
+     "prompt_number": 92
     },
     {
      "cell_type": "code",
@@ -520,7 +521,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 33
+     "prompt_number": 93
     },
     {
      "cell_type": "code",
@@ -532,7 +533,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 34
+     "prompt_number": 94
     },
     {
      "cell_type": "code",
@@ -548,11 +549,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Comments: it was a good day\n"
+        "Comments: looking forward to a great day\n"
        ]
       }
      ],
-     "prompt_number": 36
+     "prompt_number": 96
     },
     {
      "cell_type": "code",
@@ -566,13 +567,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 37,
+       "prompt_number": 97,
        "text": [
-        "'it was a good day'"
+        "'looking forward to a great day'"
        ]
       }
      ],
-     "prompt_number": 37
+     "prompt_number": 97
     },
     {
      "cell_type": "code",
@@ -581,7 +582,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 37
+     "prompt_number": 97
     },
     {
      "cell_type": "code",
@@ -592,16 +593,18 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 38
+     "prompt_number": 105
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "betdict = {'name': mname}"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 38
+     "prompt_number": 106
     },
     {
      "cell_type": "code",
@@ -615,13 +618,90 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 39,
+       "prompt_number": 107,
        "text": [
-        "{'William Mckee': '2226d323c5c90652e7c70abca2cbe5eb7a74dc1d49780ac8ebb0ff6ec2eeaa8b735c87b50c5ad4c2f0ee4a9852272bace8fef5e87b48c9b16da34d9e61f965c555cbd91063282c4a1afd1d1cfa7f05b99f6653816a13970cb0a57bf87fb1445742d6fa16148cbbed3a26b377fb15bb5154e7218fdf2299e76962419502d04c68'}"
+        "{'William Mckee': '2cb3aba5061a4df3f2044b213c00803cae38ddfe497c1f54e85297274b0153ec0fb4e81394ac54a01adae14c609c5aa43ab228707c647b035351b42a174f30032aefaac95171a3529531c33ec5d8495f433baf9f1513544ef8ca375057c1ad95d88a77c276a3feeb80d1fc60cc2a5ce40e40488b79aa2a9c278a6b49daeaf066'}"
        ]
       }
      ],
-     "prompt_number": 39
+     "prompt_number": 107
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "betdict"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 108,
+       "text": [
+        "{'name': 'William Mckee'}"
+       ]
+      }
+     ],
+     "prompt_number": 108
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "dayr = time.strftime(\"%d\" + \"-\" + \"%b\" + \"-\" + \"%Y\")\n",
+      "hrmn = time.strftime(\"%H:%M\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 109
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "betdict.update({'reason': signin})\n",
+      "betdict.update({'signin comment': usecom})\n",
+      "betdict.update({'signin date': dayr})\n",
+      "betdict.update({'signin hrmin': hrmn})"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 110
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "betjsn = json.dumps(betdict)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 113
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "betjsn"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 114,
+       "text": [
+        "'{\"signin hrmin\": \"08:03\", \"reason\": \"ESW\", \"name\": \"William Mckee\", \"signin date\": \"13-Oct-2014\", \"signin comment\": \"looking forward to a great day\"}'"
+       ]
+      }
+     ],
+     "prompt_number": 114
     },
     {
      "cell_type": "code",
@@ -881,11 +961,15 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "savpos = open('/home/wcmckee/visignsys/posts/' + ixtwe + '.json', 'w')\n",
+      "savpos.write(str(betjsn))\n",
+      "savpos.close()"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 837
+     "prompt_number": 115
     },
     {
      "cell_type": "code",
