--- a/whaiout.ipynb
+++ b/whaiout.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:de2cfef40e6c76c1d235b0571d9d73937b935493a6d3f0f52edd9dc58ac6f52f"
+  "signature": "sha256:606920866f41da9c4a777f91c666d4d9df918f652bed742c301dd77e6d022ee5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -31,12 +31,13 @@
       "import time\n",
       "from xlutils.copy import copy\n",
       "from xlrd import *\n",
-      "import dominate"
+      "import dominate\n",
+      "import json"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 40
     },
     {
      "cell_type": "code",
@@ -196,6 +197,41 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "snoutm = {'signout date': endate}\n",
+      "snoutm.update({'signout time': entim})\n",
+      "snoutm.update({'signout comment': inpcom})"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 41
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "snoutm"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 42,
+       "text": [
+        "{'signout comment': 'fun day',\n",
+        " 'signout date': '12-Oct-2014',\n",
+        " 'signout time': '17:59'}"
+       ]
+      }
+     ],
+     "prompt_number": 42
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "signoutdic = {endate: tiran}\n",
       "timoutdic = {entim: reran}"
      ],
@@ -219,12 +255,23 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "signoutdic.update({inpcom: comran})"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 26
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "signkeys = signoutdic.keys()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
@@ -241,7 +288,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 28
     },
     {
      "cell_type": "code",
@@ -252,7 +299,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
@@ -263,7 +310,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 30
     },
     {
      "cell_type": "code",
@@ -292,7 +339,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 15
+     "prompt_number": 31
     },
     {
      "cell_type": "code",
@@ -303,7 +350,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 16
+     "prompt_number": 32
     },
     {
      "cell_type": "code",
@@ -314,7 +361,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 17
+     "prompt_number": 33
     },
     {
      "cell_type": "code",
@@ -327,7 +374,15 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 18
+     "prompt_number": 34
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -340,7 +395,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 19
+     "prompt_number": 35
     },
     {
      "cell_type": "code",
@@ -351,7 +406,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 20
+     "prompt_number": 36
     },
     {
      "cell_type": "code",
@@ -365,13 +420,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 21,
+       "prompt_number": 37,
        "text": [
-        "'3794fd4340da'"
+        "'1ad0a0735ae9'"
        ]
       }
      ],
-     "prompt_number": 21
+     "prompt_number": 37
     },
     {
      "cell_type": "code",
@@ -384,7 +439,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 22
+     "prompt_number": 38
     },
     {
      "cell_type": "code",
@@ -398,18 +453,22 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 23,
+       "prompt_number": 39,
        "text": [
-        "\"['17:47', 'ESW', 'William Mckee', '12-Oct-2014', 'it was a good day']['17:59', '12-Oct-2014']\""
+        "\"['17:47', 'ESW', 'William Mckee', '12-Oct-2014', 'it was a good day']['17:59', '12-Oct-2014']['17:59', 'fun day', '12-Oct-2014']\""
        ]
       }
      ],
-     "prompt_number": 23
+     "prompt_number": 39
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "jsnrd = open('/home/wcmckee/visignsys/posts/' + trsor + '.json', 'w')\n",
+      "jsnrd.write(oplsav)\n",
+      "jsnrd.close()"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
